--- a/public/assets/epiceditor/preview.css
+++ b/public/assets/epiceditor/preview.css
@@ -1,3 +1,1 @@
-@import url('https://symer.io/assets/css/site.css');
-body { text-align: left; }
-#epiceditor-preview { background: transparent; }
+@import url(https://symer.io/assets/css/site.css);body{text-align:left}
