--- a/public/assets/epiceditor/editor.css
+++ b/public/assets/epiceditor/editor.css
@@ -1,9 +1,1 @@
-body {
-  background:rgb(61,61,61);
-  color:rgb(200,200,200);
-  font-family:monospace;
-  font-size:14px;
-  padding:7px;
-  padding-right: 11px;
-  line-height:1.35em;
-}
+body{background:#3d3d3d;color:#c8c8c8;font-family:monospace;font-size:14px;padding:7px 11px 7px 7px;line-height:1.35em}
