Partial features & cleanup
Implemented the basic logic for tags and auth.
This includes writing a tag editor.

Removed straggler files from epiceditor (which
turned out to be not-so-epic).

--- a/public/assets/editor.css
+++ b/public/assets/editor.css
@@ -34,3 +34,32 @@
 #buttons > button {
   margin: 20px 60px;
 }
+
+.wordlist-view span:after {
+	content: "\00D7";
+	margin-left: 5px;
+	cursor: pointer;
+}
+
+.wordlist-view {
+	margin-bottom: 20px;
+}
+.wordlist-view * {
+	font-size: 16px;
+	line-height: 22px;
+}
+.wordlist-view span {
+	display: inline-block;
+	padding: 5px;
+  border: 1px solid #7F7F7F;
+  border: solid #7F7F7F;
+	border-width: 1px 0 1px 1px;
+}
+
+.wordlist-view input {
+  border: 1px solid #7F7F7F;
+  margin: 0;
+  padding: 5px;
+  width: 110px;
+  border-width: 0px 0px 0px 1px;
+}
