--- a/public/assets/editor.css
+++ b/public/assets/editor.css
@@ -32,7 +32,7 @@
 }
 
 #buttons > button {
-  margin: 20px 60px;
+  margin: 0px 60px;
 }
 
 .wordlist-view span:after {
@@ -61,5 +61,5 @@
   margin: 0;
   padding: 5px;
   width: 110px;
-  border-width: 0px 0px 0px 1px;
+  border-width: 1px;
 }
