--- a/public/assets/blog.css
+++ b/public/assets/blog.css
@@ -14,8 +14,7 @@
   margin: 25px;
 }
 
-#blog-subtitle {
-}
+#blog-subtitle {}
 
 .post-title {
   font-size:40px;
@@ -25,4 +24,18 @@
 .post-content > * {
   font-size:20px;
   line-height:1.35em;
+}
+
+.blogbutton {
+  display: inline-block;
+  color: #fff;
+  cursor: pointer;
+  padding: 10px 30px;
+  background-color: #979797;
+  margin: 10px;
+}
+
+.blogbutton:hover {
+  color: #fff;
+  background-color: #8A8A8A;
 }
