--- a/public/assets/editor.css
+++ b/public/assets/editor.css
@@ -1,4 +1,5 @@
 #editor {
+  border: none;
   background:#3d3d3d;
   color:#c8c8c8;
   font-family:monospace;
@@ -10,10 +11,7 @@
   height:500px;
 }
 
-#preview {
-  width: 100%;
-  text-align: left;
-}
+#preview { width: 100%; text-align: left; }
 
 #title-field {
   width: calc(100% - 50px);
@@ -26,40 +24,18 @@
   outline: none;
 }
 
-#buttons-table {
-  border-spacing: 10px;
-  border-collapse: separate;
+#save-button.blogbutton {
+  background-color: #64A58D;
 }
 
-#buttons > button {
-  margin: 0px 60px;
+#preview-button.blogbutton {
+  background-color: #8A5FD2;
 }
 
-.wordlist-view span:after {
-	content: "\00D7";
-	margin-left: 5px;
-	cursor: pointer;
+#delete-button.blogbutton {
+  background-color: #B15D42;
 }
 
-.wordlist-view {
-	margin-bottom: 20px;
-}
-.wordlist-view * {
-	font-size: 16px;
-	line-height: 22px;
-}
-.wordlist-view span {
-	display: inline-block;
-	padding: 5px;
-  border: 1px solid #7F7F7F;
-  border: solid #7F7F7F;
-	border-width: 1px 0 1px 1px;
-}
-
-.wordlist-view input {
-  border: 1px solid #7F7F7F;
-  margin: 0;
-  padding: 5px;
-  width: 110px;
-  border-width: 1px;
-}
+#save-button.blogbutton:hover { color: #fff;background-color: #8A8A8A; }
+#preview-button.blogbutton:hover { color: #fff;background-color: #8A8A8A; }
+#delete-button.blogbutton:hover { color: #fff;background-color: #8A8A8A; }
