--- a/public/assets/editor.css
+++ b/public/assets/editor.css
@@ -2,8 +2,8 @@
   border: none;
   background:#3d3d3d;
   color:#c8c8c8;
-  font-family:monospace;
-  font-size:14px;
+  font-family: monospace;
+  font-size: 14px;
   line-height:1.35em;
   padding: 18px;
   resize:none;
@@ -11,7 +11,10 @@
   height:500px;
 }
 
-#preview { width: 100%; text-align: left; }
+#preview { 
+  width: 100%;
+  text-align: left;
+}
 
 #title-field {
   width: calc(100% - 50px);
