Removed unneeded dependencies

--- a/public/assets/editor.css
+++ b/public/assets/editor.css
@@ -25,6 +25,7 @@
   border-bottom: 2px dotted;
   background-color: transparent;
   outline: none;
+  color:#787878;
 }
 
 #save-button.blogbutton {
