--- a/public/assets/blog.css
+++ b/public/assets/blog.css
@@ -26,16 +26,20 @@
   line-height:1.35em;
 }
 
-.blogbutton {
+a.blogbutton {
   display: inline-block;
-  color: #fff;
   cursor: pointer;
   padding: 10px 30px;
   background-color: #979797;
   margin: 10px;
+  color: #F0F0F0;
+  text-decoration: none;
 }
 
-.blogbutton:hover {
-  color: #fff;
+a.blogbutton:hover {
   background-color: #8A8A8A;
+}
+
+a.blogbutton:active {
+  background-color: #7A7A7A;
 }
