--- a/public/assets/blog.css
+++ b/public/assets/blog.css
@@ -30,16 +30,17 @@ a.blogbutton {
   display: inline-block;
   cursor: pointer;
   padding: 10px 30px;
-  background-color: #979797;
+  background-color: #A9A9A9;
   margin: 10px;
   color: #F0F0F0;
   text-decoration: none;
+  transition: background-color 0.3s;
 }
 
 a.blogbutton:hover {
-  background-color: #8A8A8A;
+  background-color: #969696;
 }
 
 a.blogbutton:active {
-  background-color: #7A7A7A;
+  background-color: #6A6A6A;
 }
