--- a/assets/css/wordlist.css
+++ b/assets/css/wordlist.css
@@ -1,4 +1,5 @@
 .wordlist-view {
+  max-width: 700px;
   margin: 30px;
   width: auto;
 }
@@ -9,23 +10,30 @@
 
 .wordlist-view input {
   width: 100px;
+  border: none;
+  background-color: #545454;
+  color: #F0F0F0;
+  
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   
   vertical-align: middle;
   padding: 10px;
   padding-left: 5px;
-  
-  border: none;
-  background-color: #545454;
-  color: #F0F0F0;
 }
 
 .wordlist-item {
   background-color: #80B9B4;
   color: #F0F0F0;
-  display: inline;
+
+  display: inline-block;
+
   margin-right: 10px;
   padding: 10px;
   vertical-align: middle;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .wordlist-view span:after {
