--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,22 +1,46 @@
 @font-face {
     font-family: refrigerator-light;
-    src: url(/assets/fonts/refrigerator-light.ttf);
-}
-
-@font-face {
-    font-family: oxygen-regular;
-    src: url(/assets/fonts/oxygen/Oxygen-Regular.ttf);
+    src: url('/assets/fonts/refrigerator/refrigerator-light.eot');
+    src: url('/assets/fonts/refrigerator/refrigerator-light.eot?#iefix') format('embedded-opentype'),
+         url('/assets/fonts/refrigerator/refrigerator-light.woff2') format('woff2'),
+         url('/assets/fonts/refrigerator/refrigerator-light.woff') format('woff'),
+         url('/assets/fonts/refrigerator/refrigerator-light.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 /*@font-face {
     font-family: oxygen-bold;
-    src: url(/assets/fonts/oxygen/Oxygen-Bold.ttf);
+    src: url('/assets/fonts/oxygen/Oxygen-Bold.eot');
+    src: url('/assets/fonts/oxygen/Oxygen-Bold.eot?#iefix') format('embedded-opentype'),
+         url('/assets/fonts/oxygen/Oxygen-Bold.woff2') format('woff2'),
+         url('/assets/fonts/oxygen/Oxygen-Bold.woff') format('woff'),
+         url('/assets/fonts/oxygen/Oxygen-Bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
     font-family: oxygen-light;
-    src: url(/assets/fonts/oxygen/Oxygen-Light.ttf);
+    src: url('/assets/fonts/oxygen/Oxygen-Light.eot');
+    src: url('/assets/fonts/oxygen/Oxygen-Light.eot?#iefix') format('embedded-opentype'),
+         url('/assets/fonts/oxygen/Oxygen-Light.woff2') format('woff2'),
+         url('/assets/fonts/oxygen/Oxygen-Light.woff') format('woff'),
+         url('/assets/fonts/oxygen/Oxygen-Light.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }*/
+
+@font-face {
+    font-family: oxygen-regular;
+    src: url('/assets/fonts/oxygen/Oxygen-Regular.eot');
+    src: url('/assets/fonts/oxygen/Oxygen-Regular.eot?#iefix') format('embedded-opentype'),
+         url('/assets/fonts/oxygen/Oxygen-Regular.woff2') format('woff2'),
+         url('/assets/fonts/oxygen/Oxygen-Regular.woff') format('woff'),
+         url('/assets/fonts/oxygen/Oxygen-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
 body {
   background: #F0F0F0;
