--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -9,7 +9,7 @@
     font-style: normal;
 }
 
-/*@font-face {
+@font-face {
     font-family: oxygen-bold;
     src: url('/assets/fonts/oxygen/Oxygen-Bold.eot');
     src: url('/assets/fonts/oxygen/Oxygen-Bold.eot?#iefix') format('embedded-opentype'),
@@ -29,7 +29,7 @@
          url('/assets/fonts/oxygen/Oxygen-Light.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-}*/
+}
 
 @font-face {
     font-family: oxygen-regular;
