--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -123,6 +123,8 @@ a < img {
   color: #888;
 }
 
+/* Buttons */
+
 a.blogbutton {
   display: inline-block;
   cursor: pointer;
@@ -131,6 +133,10 @@ a.blogbutton {
   margin: 10px;
   color: #F0F0F0;
   text-decoration: none;
+  -moz-user-select: none; 
+          -khtml-user-select: none; 
+          -webkit-user-select: none; 
+          -o-user-select: none; 
 }
 
 a.blogbutton:hover {
@@ -141,8 +147,30 @@ a.blogbutton:active {
   background-color: #6A6A6A;
 }
 
-/* from http://tobiasahlin.com/spinkit/ */
+/* Text Fields */
+input[type="text"].blogtextfield, input[type="password"].blogtextfield {
+  text-align: center;
+  display: block;
+  margin: 20px auto;
+  font-family: sans-serif;
+  font-size: 18px;
+  appearance: none;
+  box-shadow: none;
+  border-radius: none;
+  padding: 10px;
+  border: none;
+  border-bottom: solid 2px #c9c9c9;
+  transition: border 0.3s;
+}
 
+input[type="text"].blogtextfield:focus, input[type="password"].blogtextfield:focus {
+  outline: none;
+  border-bottom: solid 2px #969696;
+}
+
+/* Spinner */
+/* from http://tobiasahlin.com/spinkit/ */
+/*
 .spinner {
   width: 60px;
   height: 60px;
@@ -160,14 +188,59 @@ a.blogbutton:active {
 }
 
 @keyframes rotateplane {
-  0% { 
+  0% {
     transform: perspective(120px) rotateX(0deg) rotateY(0deg);
-    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg) 
-  } 50% { 
+    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)
+  } 50% {
     transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
-    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg) 
-  } 100% { 
+    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
+  } 100% {
     transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
     -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+  }
+}*/
+
+spinner {
+  margin: 100px auto 0;
+  width: 70px;
+  text-align: center;
+}
+
+.spinner > div {
+  width: 18px;
+  height: 18px;
+  background-color: #333;
+
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: bouncedelay 1.4s infinite ease-in-out;
+  animation: bouncedelay 1.4s infinite ease-in-out;
+  /* Prevent first frame from flickering when animation starts */
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes bouncedelay {
+  0%, 80%, 100% { -webkit-transform: scale(0.0) }
+  40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes bouncedelay {
+  0%, 80%, 100% { 
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 40% { 
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
   }
 }
