--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -42,6 +42,8 @@
     font-style: normal;
 }
 
+*[hidden] { display: none; }
+
 body {
   background: #F0F0F0;
   margin: 0px;
@@ -129,22 +131,24 @@ a.blogbutton {
   display: inline-block;
   cursor: pointer;
   padding: 10px 30px;
-  background-color: #888;
-  margin: 10px;
-  color: #F0F0F0;
+  background-color: #9A9A9A;
+  
+  margin: 6px;
+/*  margin: 10px;*/
+  color: #F9F9F9;
   text-decoration: none;
   -moz-user-select: none; 
-          -khtml-user-select: none; 
-          -webkit-user-select: none; 
-          -o-user-select: none; 
+  -khtml-user-select: none; 
+  -webkit-user-select: none; 
+  -o-user-select: none; 
 }
 
 a.blogbutton:hover {
-  background-color: #969696;
+  background-color: #5A5A5A;
 }
 
 a.blogbutton:active {
-  background-color: #6A6A6A;
+  background-color: #9F9F9F;
 }
 
 /* Text Fields */
@@ -166,81 +170,4 @@ input[type="text"].blogtextfield, input[type="password"].blogtextfield {
 input[type="text"].blogtextfield:focus, input[type="password"].blogtextfield:focus {
   outline: none;
   border-bottom: solid 2px #969696;
-}
-
-/* Spinner */
-/* from http://tobiasahlin.com/spinkit/ */
-/*
-.spinner {
-  width: 60px;
-  height: 60px;
-  background-color: #BCADAF;
-
-  margin: 100px auto;
-  -webkit-animation: rotateplane 1.2s infinite ease-in-out;
-  animation: rotateplane 1.2s infinite ease-in-out;
-}
-
-@-webkit-keyframes rotateplane {
-  0% { -webkit-transform: perspective(120px) }
-  50% { -webkit-transform: perspective(120px) rotateY(180deg) }
-  100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
-}
-
-@keyframes rotateplane {
-  0% {
-    transform: perspective(120px) rotateX(0deg) rotateY(0deg);
-    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)
-  } 50% {
-    transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
-    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
-  } 100% {
-    transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
-    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
-  }
-}*/
-
-spinner {
-  margin: 100px auto 0;
-  width: 70px;
-  text-align: center;
-}
-
-.spinner > div {
-  width: 18px;
-  height: 18px;
-  background-color: #333;
-
-  border-radius: 100%;
-  display: inline-block;
-  -webkit-animation: bouncedelay 1.4s infinite ease-in-out;
-  animation: bouncedelay 1.4s infinite ease-in-out;
-  /* Prevent first frame from flickering when animation starts */
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
-
-.spinner .bounce1 {
-  -webkit-animation-delay: -0.32s;
-  animation-delay: -0.32s;
-}
-
-.spinner .bounce2 {
-  -webkit-animation-delay: -0.16s;
-  animation-delay: -0.16s;
-}
-
-@-webkit-keyframes bouncedelay {
-  0%, 80%, 100% { -webkit-transform: scale(0.0) }
-  40% { -webkit-transform: scale(1.0) }
-}
-
-@keyframes bouncedelay {
-  0%, 80%, 100% { 
-    transform: scale(0.0);
-    -webkit-transform: scale(0.0);
-  } 40% { 
-    transform: scale(1.0);
-    -webkit-transform: scale(1.0);
-  }
 }
