--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -6,17 +6,21 @@
   border-radius: 10px;
 }
 
-.commentfield {
-   margin: 15px 6px !important;
-}
-
 .comment-content {
   display: inline-block;
 }
 
-.comment-editor {
+.editor {
   display: block;
   text-align: left;
+  margin: 10px;
+  padding: 10px;
+  background-color: #F1F1F1;
+  border-radius: 10px;
+}
+
+.editor.dark {
+  background-color: #D1D1D1;
 }
 
 .comment-avatar {
@@ -26,7 +30,7 @@
   border-radius: 30px;
   border: none;
   height: 100%;
-  vertical-align: middle;
+  vertical-align: top;
 }
 
 .comment-name {
@@ -39,55 +43,47 @@
   vertical-align: middle;
 }
 
-.replybutton {
-  
+.comment-editor-text-field {
+  font-family: oxygen-light, sans-serif;
+  font-size: 15pt;
+  display: block;
+  color: black;
+  margin:0;
+  padding:0;
+  border:0;
+  border-bottom: 2px dotted;
+  border-color: grey;
+  background-color: transparent;
+  outline: none;
+  width: 100%;
+  padding: 6px;
 }
 
-.commentbutton {
-  
+.comment-editor-textarea {
+  padding: 8px;
+  font-family: oxygen-light, sans-serif;
+  font-size: 12pt;
+  display: block;
+  resize: none;
+  width: 100%;
+  height: 100px;
+  border:0;
+  background-color: transparent;
+  outline: none;
 }
 
-.spinner {
-  margin: 100px auto 0;
-  width: 70px;
-  text-align: center;
-}
+.comment-editor-textarea::-webkit-input-placeholder { color: grey; }
+.comment-editor-textarea:-moz-placeholder {  color: #D2D2D2; opacity: 1; }
+.comment-editor-textarea::-moz-placeholder { color: #D2D2D2; opacity: 1; }
+.comment-editor-textarea:-ms-input-placeholder { color: #D2D2D2; }
 
-.spinner > div {
-  width: 18px;
-  height: 18px;
-  background-color: #333;
+.comment-editor-text-field::-webkit-input-placeholder { color: grey; }
+.comment-editor-text-field:-moz-placeholder { color: #E5E5E5; opacity: 1; }
+.comment-editor-text-field::-moz-placeholder {  color: #E5E5E5; opacity: 1; }
+.comment-editor-text-field:-ms-input-placeholder { color: #E5E5E5; }
 
-  border-radius: 100%;
-  display: inline-block;
-  -webkit-animation: bouncedelay 1.4s infinite ease-in-out;
-  animation: bouncedelay 1.4s infinite ease-in-out;
-  /* Prevent first frame from flickering when animation starts */
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
-
-.spinner .bounce1 {
-  -webkit-animation-delay: -0.32s;
-  animation-delay: -0.32s;
-}
-
-.spinner .bounce2 {
-  -webkit-animation-delay: -0.16s;
-  animation-delay: -0.16s;
-}
-
-@-webkit-keyframes bouncedelay {
-  0%, 80%, 100% { -webkit-transform: scale(0.0) }
-  40% { -webkit-transform: scale(1.0) }
-}
-
-@keyframes bouncedelay {
-  0%, 80%, 100% { 
-    transform: scale(0.0);
-    -webkit-transform: scale(0.0);
-  } 40% { 
-    transform: scale(1.0);
-    -webkit-transform: scale(1.0);
-  }
+#spinner-container {
+  text-align:middle;
+  height:200px;
+  position: relative;
 }
