--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -125,6 +125,16 @@ a < img {
   color: #888;
 }
 
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
 /* Buttons */
 
 a.blogbutton {
@@ -137,10 +147,13 @@ a.blogbutton {
 /*  margin: 10px;*/
   color: #F9F9F9;
   text-decoration: none;
-  -moz-user-select: none; 
-  -khtml-user-select: none; 
-  -webkit-user-select: none; 
-  -o-user-select: none; 
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 
 a.blogbutton:hover {
