--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,7 +1,6 @@
 @font-face {
     font-family: refrigerator-light;
-    src: url('/assets/fonts/refrigerator/refrigerator-light.eot');
-    src: url('/assets/fonts/refrigerator/refrigerator-light.eot?#iefix') format('embedded-opentype'),
+    src: url('/assets/fonts/refrigerator/refrigerator-light.eot') format('eot'),
          url('/assets/fonts/refrigerator/refrigerator-light.woff2') format('woff2'),
          url('/assets/fonts/refrigerator/refrigerator-light.woff') format('woff'),
          url('/assets/fonts/refrigerator/refrigerator-light.ttf') format('truetype');
@@ -11,8 +10,7 @@
 
 @font-face {
     font-family: oxygen-bold;
-    src: url('/assets/fonts/oxygen/Oxygen-Bold.eot');
-    src: url('/assets/fonts/oxygen/Oxygen-Bold.eot?#iefix') format('embedded-opentype'),
+    src: url('/assets/fonts/oxygen/Oxygen-Bold.eot') format('eot'),
          url('/assets/fonts/oxygen/Oxygen-Bold.woff2') format('woff2'),
          url('/assets/fonts/oxygen/Oxygen-Bold.woff') format('woff'),
          url('/assets/fonts/oxygen/Oxygen-Bold.ttf') format('truetype');
@@ -22,8 +20,7 @@
 
 @font-face {
     font-family: oxygen-light;
-    src: url('/assets/fonts/oxygen/Oxygen-Light.eot');
-    src: url('/assets/fonts/oxygen/Oxygen-Light.eot?#iefix') format('embedded-opentype'),
+    src: url('/assets/fonts/oxygen/Oxygen-Light.eot') format('eot'),
          url('/assets/fonts/oxygen/Oxygen-Light.woff2') format('woff2'),
          url('/assets/fonts/oxygen/Oxygen-Light.woff') format('woff'),
          url('/assets/fonts/oxygen/Oxygen-Light.ttf') format('truetype');
@@ -33,8 +30,7 @@
 
 @font-face {
     font-family: oxygen-regular;
-    src: url('/assets/fonts/oxygen/Oxygen-Regular.eot');
-    src: url('/assets/fonts/oxygen/Oxygen-Regular.eot?#iefix') format('embedded-opentype'),
+    src: url('/assets/fonts/oxygen/Oxygen-Regular.eot') format('eot'),
          url('/assets/fonts/oxygen/Oxygen-Regular.woff2') format('woff2'),
          url('/assets/fonts/oxygen/Oxygen-Regular.woff') format('woff'),
          url('/assets/fonts/oxygen/Oxygen-Regular.ttf') format('truetype');
