--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -1,3 +1,9 @@
+#spinner-container {
+  text-align:middle;
+  height:200px;
+  position: relative;
+}
+
 .comment {
   text-align: left;
   margin: 10px;
@@ -6,21 +12,9 @@
   border-radius: 10px;
 }
 
-.comment-content {
-  display: inline-block;
-}
-
 .editor {
-  display: block;
   text-align: left;
   margin: 10px;
-  padding: 10px;
-  background-color: #F1F1F1;
-  border-radius: 10px;
-}
-
-.editor.dark {
-  background-color: #D1D1D1;
 }
 
 .comment-avatar {
@@ -43,47 +37,49 @@
   vertical-align: middle;
 }
 
-.comment-editor-text-field {
-  font-family: oxygen-light, sans-serif;
-  font-size: 15pt;
-  display: block;
-  color: black;
-  margin:0;
-  padding:0;
-  border:0;
-  border-bottom: 2px dotted;
-  border-color: grey;
-  background-color: transparent;
-  outline: none;
-  width: 100%;
-  padding: 6px;
+div.gobutton {
+  display:inline-block;
+  vertical-align: middle;
+  width: 100px;
+  height: 40px;
+  background-image: url('/assets/images/gobutton.svg');
+  margin-left: 5px;
 }
 
-.comment-editor-textarea {
-  padding: 8px;
-  font-family: oxygen-light, sans-serif;
-  font-size: 12pt;
-  display: block;
+div.gobutton:active {
+  opacity: 0.5;
+}
+
+textarea.comment-textarea {
+  width: 540px;
+  height: 200px;
+  margin: 10px 10px 10px 0px;
+  padding: 8px 8px 8px 10px;
+  border: none;
+  border-left: 4px solid #E7950E;
   resize: none;
-  width: 100%;
-  height: 100px;
-  border:0;
-  background-color: transparent;
   outline: none;
+  font-size: 23pt;
+  background-color: #E6E6E6;
+  font-family: Helvetica, sans-serif;
+  display: inline;
+  display: inline-block;
+  vertical-align: middle;
 }
 
-.comment-editor-textarea::-webkit-input-placeholder { color: grey; }
-.comment-editor-textarea:-moz-placeholder {  color: #D2D2D2; opacity: 1; }
-.comment-editor-textarea::-moz-placeholder { color: #D2D2D2; opacity: 1; }
-.comment-editor-textarea:-ms-input-placeholder { color: #D2D2D2; }
+input.comment-field {
+  width: 270px;
+  height: 40px;
+  margin: 0px 20px 10px 0px;
+  border: none;
+  border-bottom: 2px solid #9F8E90;
+  background-color: rgba(0,0,0,0);
+  outline: none;
+  font-family: Arial, sans-serif;
+  font-size: 25pt;
+  color: #4A4A4A;
+}
 
-.comment-editor-text-field::-webkit-input-placeholder { color: grey; }
-.comment-editor-text-field:-moz-placeholder { color: #E5E5E5; opacity: 1; }
-.comment-editor-text-field::-moz-placeholder {  color: #E5E5E5; opacity: 1; }
-.comment-editor-text-field:-ms-input-placeholder { color: #E5E5E5; }
-
-#spinner-container {
-  text-align:middle;
-  height:200px;
-  position: relative;
+.top-fields {
+  display:block;
 }
