--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -108,6 +108,14 @@ a < img {
   text-align: left;
 }
 
+code {
+  border: 1px solid #C9C6C6;
+  background-color: #F2EDED;
+  font-family: monospace;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 .post-edit-button {
   display: block;
 }
