--- a/assets/css/editor.css
+++ b/assets/css/editor.css
@@ -69,6 +69,7 @@ input[type=checkbox]#public-checkbox {
   margin:0px;
   margin-right:5px;
   vertical-align: middle;
+  outline: none;
 }
 
 input[type=checkbox]#public-checkbox:checked:after {
