--- a/assets/css/wordlist.css
+++ b/assets/css/wordlist.css
@@ -38,6 +38,14 @@
   margin-bottom: 5px;
 }
 
+.wordlist-view span {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 .wordlist-view span:after {
 	content: "\00D7";
 	margin-left: 5px;
