--- a/assets/css/comments.css
+++ b/assets/css/comments.css
@@ -17,16 +17,6 @@
   left: 0px;
 }
 
-/*.comment:before {
-  content:'';
-  width: 50px;
-  height: 1px;
-  background: gray;
-  position: absolute;
-  left: 0px;
-  top: -1px;
-}*/
-
 .comment-name {
   margin-top: 0px;
 }
@@ -37,7 +27,7 @@ div.editor {
 
 div.gobutton {
   display:inline-block;
-  vertical-align: middle;
+  align: center;
   width: 100px;
   height: 40px;
   background-image: url('/assets/images/gobutton.svg');
@@ -49,9 +39,9 @@ div.gobutton:active {
 }
 
 textarea.comment-textarea {
-  width: calc(100% - 140px );
+  width: 100%;
   height: 200px;
-  margin: 10px 10px 10px 0px;
+  margin-bottom: 10px;
   padding: 8px 8px 8px 10px;
   border: none;
   border-left: 2px solid #E7950E;
@@ -65,9 +55,9 @@ textarea.comment-textarea {
 }
 
 input.comment-field {
-  width: calc(50% - 72.5px);
+  width: 100%;
   height: 40px;
-  margin: 0px 20px 10px 0px;
+  margin-bottom: 10px;
   border: none;
   border-bottom: 2px solid #9F8E90;
   background-color: rgba(0,0,0,0);
