--- a/assets/css/comments.css
+++ b/assets/css/comments.css
@@ -32,6 +32,7 @@ div.gobutton {
   height: 40px;
   background-image: url('/assets/images/gobutton.svg');
   margin-left: 5px;
+  cursor: pointer;
 }
 
 div.gobutton:active {
