--- a/assets/css/comments.css
+++ b/assets/css/comments.css
@@ -26,12 +26,11 @@ div.editor {
 }
 
 div.gobutton {
-  display:inline-block;
-  align: center;
+  display: block;
   width: 100px;
   height: 40px;
-  background-image: url('/assets/images/gobutton.svg');
-  margin-left: 5px;
+  background: url('/assets/images/gobutton.svg') no-repeat;
+  margin: 10px auto;
   cursor: pointer;
 }
 
@@ -40,40 +39,20 @@ div.gobutton:active {
 }
 
 textarea.comment-textarea {
-  width: 100%;
+  width: 95%;
   height: 200px;
-  margin-bottom: 10px;
-  padding: 8px 8px 8px 10px;
-  border: none;
-  border-left: 2px solid #E7950E;
-  resize: none;
-  outline: none;
-  font-size: 15pt;
-  background-color: #E6E6E6;
-  font-family: Helvetica, sans-serif;
-  display: inline-block;
-  vertical-align: middle;
 }
 
-input.comment-field {
-  width: 100%;
-  height: 40px;
-  margin-bottom: 10px;
-  border: none;
-  border-bottom: 2px solid #9F8E90;
-  background-color: rgba(0,0,0,0);
-  outline: none;
-  font-family: Arial, sans-serif;
-  font-size: 16pt;
-  color: #4A4A4A;
+input.comment-field.textfield {
+  margin: 10px;
+  width: 40%;
+  display: block;
 }
 
-textarea.comment-textarea,
-input.comment-field {
-  -webkit-appearance: none;
-  border-radius: 0;
+textarea.comment-textarea.textarea:focus {
+  border-left: solid 2px #80B9B4;
 }
 
-.top-fields {
-  display:block;
+input.comment-field.textfield:focus {
+  border-bottom: solid 2px #80B9B4;
 }
