--- a/assets/css/wordlist.css
+++ b/assets/css/wordlist.css
@@ -9,20 +9,14 @@
 }
 
 .wordlist-view input {
-  width: 100px;
-  border: none;
-  background-color: #545454;
-  color: #F0F0F0;
-  
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  
-  vertical-align: middle;
+  width: 80px;
   padding: 10px;
-  padding-left: 5px;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin: 5px 0px;
+  vertical-align: middle;
+  
+  border: none;
+  color: #F0F0F0;
+  background-color: #545454;
 }
 
 .wordlist-item {
@@ -36,14 +30,6 @@
   vertical-align: middle;
   margin-top: 5px;
   margin-bottom: 5px;
-}
-
-.wordlist-view span {
-  -moz-user-select: none;
-  -khtml-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
 }
 
 .wordlist-view span:after {
