--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,30 +1,3 @@
-@font-face {
-    font-family: oxygen-bold;
-    font-weight: normal;
-    src: url('/assets/fonts/oxygen/Oxygen-Bold.eot') format('eot'),
-         url('/assets/fonts/oxygen/Oxygen-Bold.woff2') format('woff2'),
-         url('/assets/fonts/oxygen/Oxygen-Bold.woff') format('woff'),
-         url('/assets/fonts/oxygen/Oxygen-Bold.ttf') format('truetype');
-}
-
-@font-face {
-    font-family: oxygen-light;
-    font-weight: normal;
-    src: url('/assets/fonts/oxygen/Oxygen-Light.eot') format('eot'),
-         url('/assets/fonts/oxygen/Oxygen-Light.woff2') format('woff2'),
-         url('/assets/fonts/oxygen/Oxygen-Light.woff') format('woff'),
-         url('/assets/fonts/oxygen/Oxygen-Light.ttf') format('truetype');
-}
-
-@font-face {
-    font-family: oxygen-regular;
-    font-weight: normal;
-    src: url('/assets/fonts/oxygen/Oxygen-Regular.eot') format('eot'),
-         url('/assets/fonts/oxygen/Oxygen-Regular.woff2') format('woff2'),
-         url('/assets/fonts/oxygen/Oxygen-Regular.woff') format('woff'),
-         url('/assets/fonts/oxygen/Oxygen-Regular.ttf') format('truetype');
-}
-
 /* Page setup */
 
 body {
@@ -96,26 +69,24 @@ blockquote p {
 .title {
   font-size: 50px;
   margin: 5px;
-  font-family: oxygen-regular,helvetica,sans-serif;
+  font-family: 'Oxygen',helvetica,sans-serif;
 }
 
 .subtitle {
   font-size: 20px;
   margin: 10px;
-  font-family: oxygen-light,helvetica,sans-serif;
+  font-family: 'Oxygen Light',helvetica,sans-serif;
 }
 
 .tagline {
   font-size: 15px;
   margin: 10px;
-  font-family: oxygen-light,helvetica,sans-serif;
+  font-family: 'Oxygen Light',helvetica,sans-serif;
 }
 
 #name-title {
   color: #b15d42;
 }
-
-
 
 #prevbutton {
   float: left;
@@ -147,7 +118,7 @@ blockquote p {
 
 .post-title {
   font-size:30px;
-  font-family: oxygen-regular,sans-serif;
+  font-family: 'Oxygen',sans-serif;
   color: #80B9B4;
   margin: 0px;
 }
