--- a/assets/css/editor.css
+++ b/assets/css/editor.css
@@ -13,7 +13,7 @@
 }
 
 #title-field {
-  font-family: oxygen-regular,sans-serif;
+  font-family: 'Oxygen',sans-serif;
   width: calc(100% - 50px);
   text-align: center;
   margin: 25px 0px;
